# mc-simulation

./: README.md  pyproject.toml
assets/: global_components.css
jupyter_notebooks/: minimal_monte_carlo_simulation.ipynb  nasdaqlisted.txt  otherlisted.txt  scrape_ticker_symbols.ipynb  stock_data_exploration.ipynb
mc_simulation/: __init__.py  app.py  backend.py  callbacks.py  data_provider.py  global_components.py  layout.py  simulation.py  style.py
mc_simulation/backend/: analyzer.py  callbacks.py  data_provider.py  global_components.py  plot.py  simulation.py
mc_simulation/frontend/: layout.py
