[tool.poetry]
name = "mc-simulation"
version = "0.1.0"
description = "Investment portfolio simulation using Monte Carlo simulation"
authors = ["Micha Ianniello <micha.ianniello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.14.2"
pandas = "^2.2.0"
yfinance = "^0.2.36"
dash-bootstrap-components = "^1.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
